# bert-replicate

./: Makefile  README.md  bert_weights.ipynb  pyproject.toml  requirements.txt
data/: tokenized_train.npy
src/: model.py  tiny_shakespeare.py  train.py
