[project]
name = "bert_replicate"
version = "0.1.0"
description = "A Python project using PyTorch and Transformers"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "torch",
    "transformers",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311" 
